@@ -1,9 +1,12 @@
-import unittest2 as unittest
+try:
+    import unittest2 as unittest
+except ImportError:
+    import unittest
 
 class TestProviderSettings(unittest.TestCase):
 
     def _makeOne(self, settings, prefix):
-        from velruse.utils import ProviderSettings
+        from velruse.settings import ProviderSettings
         return ProviderSettings(settings, prefix=prefix)
 
     def test_it(self):
